Fix wrapping for remote connection ui (#443)

--- a/dev/res/css/connection-overview.css
+++ b/dev/res/css/connection-overview.css
@@ -67,7 +67,7 @@ body {
 #deployment-box {
     float: left;
     margin-top: 1em;
-    width: 585px;
+    width: 560px;
     height: 430px;
     background-color: var(--vscode-sideBar-background);
 }
@@ -78,9 +78,9 @@ body {
 
 #link-container-box {
     margin-top: 1em;
-    width: 585px;
+    width: 500px;
     height: 200px;
-    margin-left: 50px;
+    margin-left: 20px;
     background-color: var(--vscode-sideBar-background);
 }
 
@@ -102,7 +102,7 @@ body {
     font-size: 1rem;
     line-height: 1rem;
     width: 335px;
-    margin-left: 130px
+    margin-left: 85px
 }
 
 #link-container-box p {
@@ -110,6 +110,7 @@ body {
     font-size: 15px;
     margin-top: 22px;
     margin-bottom: 5px;
+    margin-right: 20px;
 }
 
 #link-container-box .registry-help-label {
@@ -119,8 +120,8 @@ body {
 #link-container-box input {
     float: right;
     width: 20px;
-    margin-right: 370px;
-    margin-top: 3px;
+    margin-right: 288px;
+    margin-top: 5px;
 }
 
 #deployment-box p {
@@ -152,7 +153,7 @@ body {
 #deployment-box .learn-more-btn {
     width: 20px;
     float: right;
-    margin-top: 3px;
+    margin-top: 5px;
 }
 
 #deployment-box .learn-more-btn :focus {
@@ -189,7 +190,7 @@ body {
 }
 
 .input-password {
-    margin-left: 35px;
+    margin-left: 11px;
 }
 
 .remote-connection-btn-group button {
@@ -256,13 +257,14 @@ body {
     vertical-align: text-top;
     height: 1.25em;
     padding: 0;
+    float: right;
 }
 
 #copy_url_tooltip {
     display: none;
 }
 
-@media (max-width: 1420px) {
+@media (max-width: 1210px) {
     #link-container-box {
         margin-left: 0px;
         float: left;
